--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.4.1"
-askama = "0.12.1"
+askama = { version = "0.12.1", features = ["with-axum"] }
+askama_axum = "0.4.0"
+axum = "0.7.4"
 diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
 dotenv = "0.15.0"
+tokio = { version = "1.35.1", features = ["full"] }
