--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ askama_axum = "0.4.0"
 axum = "0.7.4"
 diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
 dotenv = "0.15.0"
+serde = { version = "1.0.195", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["full"] }
