--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   db:
-    image: postgres:alpine
+    image: postgres:16-alpine
     ports:
       - "127.0.0.1:5432:5432"
     environment:
