--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
 dotenv = "0.15.0"
 serde = { version = "1.0.195", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["full"] }
+tower-http = { version = "0.5.1", features = ["cors", "fs"] }
 tower-livereload = "0.9.1"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
